<resources>
    <string name="app_name">Treasure Vault</string>
    <string name="treasure_vault">Treasure Vault</string>
    <string name="slogan">Your finance, simplified.</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_pin">SetPinActivity</string>
    <string name="title_activity_pin_template">PinTemplate</string>
    <string name="title_activity_enter_pin">EnterPinActivity</string>
    <string name="privacy_security"><![CDATA[Privacy & Security]]></string>
    <string name="account_page">Account</string>
    <string name="settings">Settings</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account_management">Account Management</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_theme_description">Change dark/light mode</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_description">Change Indonesia/English</string>
    <string name="change_password">Change Password</string>
    <string name="pin">Pin</string>
    <string name="use_pin">Use Pin</string>
    <string name="change_pin">Change Pin</string>
    <string name="biometric">Biometric</string>
    <string name="use_biometric">Use Biometric</string>

    <string name="password_placeholder">john_doe123</string>
    <string name="gmail_placeholder">john_doe@gmail.com</string>
    <string name="login_redirect">Already have an account? Login here!</string>
    <string name="register_redirect">Don\'t have an account? Register here!</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount</string>
    <string name="rp">Rp</string>
    <string name="account">Account</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="overview">Overview</string>
    <string name="detail">Detail</string>
    <string name="total_assets">Total assets</string>
    <string name="time_frame">time frame</string>
    <string name="all">All</string>
    <string name="week">Week</string>
    <string name="august_2024">August 2024</string>
    <string name="profile_icon">profile_icon</string>
    <string name="title">Title</string>
    <string name="_100_000">100,000</string>
    <string name="account_name">Account Name</string>
    <string name="date">Date</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="upload_image">Upload image</string>
    <string name="last_week">Last Week</string>
    <string name="assets_over_time">Assets over Time</string>
    <string name="income_by_category">Income by Category</string>
    <string name="expenses_by_category">Expenses by Category</string>
    <string name="enter_your_pin">Enter your pin</string>
</resources>