<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    tools:context=".activities.RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:text="@string/register"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:background="@drawable/background_edit_text"
        android:hint="@string/gmail_placeholder"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="16sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@drawable/background_edit_text"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="16sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:text="@string/confirm_password"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@drawable/background_edit_text"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="16sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:cornerRadius="10dp"
        android:text="@string/register"/>
    <Button
        android:id="@+id/btnToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/login_redirect"
        android:textColor="@color/black"/>

</LinearLayout>